correcciones de facebook e implementacion de models

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -20,7 +20,7 @@
         <a href="/register"><button>Sign Up</button></a>
         <p>Ingresar con:</p>
         <a href="/api/session/github" target="_blank"> <button>GitHub</button></a>
-        <a href="/auth/facebook"> <button>Iniciar Sesion Facebook</button> </a>
+        <a href="/api/session/auth/facebook" target="_blank"> <button>Iniciar Sesion Facebook</button> </a>
         </div>
          </div>
 </div> 
