--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -1,16 +1,15 @@
 
-
 <div class="container-profile">
     <h4>Bienvenido!!</h4>
-    <p>Usuario: {{user.first_name}} {{user.last_name}}</p>
-    <p>Email: {{user.email}}</p>
-    <p>Edad: {{user.age}}</p>
-    {{#if provider}}
-        <p>Proveedor: {{provider}}</p>
-    {{/if}}
-    {{#if displayName}}
-        <p>Nombre: {{displayName}}</p>
+    {{#if userFacebook.provider}}
+        <!-- Si el usuario se ha autenticado con Facebook -->
+        <p>Proveedor: {{userFacebook.provider}}</p>
+        <p>Nombre: {{userFacebook.displayName}}</p>
+    {{else}}
+        <!-- Si el usuario se ha autenticado de forma normal -->
+        <p>Usuario: {{user.first_name}} {{user.last_name}}</p>
+        <p>Email: {{user.email}}</p>
+        <p>Edad: {{user.age}}</p>
     {{/if}}
     <a href="/api/session/logout"><button>Logout</button></a>
-    <a href="/logout"><button>Cerrar sesión</button></a>
 </div>
